In the Windows registry, the code page for an encoding is stored in MIME\Database\Charset\<encoding>\@InternetEncoding, not in MIME\Database\Charset\<encoding>\@Codepage (XERCESC-1092)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@529526 13f79535-47bb-0310-9956-ffa450edef68